testing/*: add --buildtype=plain to meson packages which don't specify a buildtype

--- a/testing/dav1d/APKBUILD
+++ b/testing/dav1d/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer:
 pkgname=dav1d
 pkgver=0.5.2
-pkgrel=0
+pkgrel=1
 pkgdesc="small and fast AV1 Decoder"
 url="https://code.videolan.org/videolan/dav1d"
 arch="all"
@@ -19,6 +19,7 @@ build() {
 
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Denable_tests=true \
 		-Denable_tools=true \
 		-Dfuzzing_engine=none \
