--- a/testing/dxvk/APKBUILD
+++ b/testing/dxvk/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer:
 pkgname=dxvk
 pkgver=1.5.5
-pkgrel=0
+pkgrel=1
 pkgdesc="Vulkan-based compatibility layer for Direct3D 10/11"
-options="!strip !check"
+options="!check"
 url="https://github.com/doitsujin/dxvk"
 arch="x86_64 x86"
 license="Zlib"
@@ -33,12 +33,12 @@ esac
 
 build() {
 	meson . $_outdir \
-		--cross-file $_crossfile \
-		--prefix $_prefix \
-		--bindir "" --libdir "" \
-		--buildtype release \
-		--strip \
-		-D enable_tests=false
+		--cross-file=$_crossfile \
+		--prefix=$_prefix \
+		--bindir="" \
+		--libdir="" \
+		--buildtype=plain \
+		-Denable_tests=false
 	ninja -C $_outdir
 }
 
