--- a/testing/kgx/APKBUILD
+++ b/testing/kgx/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: David Heidelberg <david@ixit.cz>
 pkgname=kgx
 pkgver=0.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A minimal terminal for GNOME"
 url="https://gitlab.gnome.org/ZanderBrown/kgx"
 arch="all !s390x !ppc64le" # !s390x !ppc64le due gnome-shell
@@ -19,6 +19,7 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--localstatedir=/var \
+		--buildtype=plain \
 		-Dgtop=true \
 		-Dgtk_doc=false \
 		-Dgir=false \
