--- a/testing/moka-icon-theme/APKBUILD
+++ b/testing/moka-icon-theme/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Carlo Landmeter <clandmeter@gmail.com>
 pkgname=moka-icon-theme
 pkgver=5.4.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Moka Icon Theme"
 url="https://snwh.org/moka"
 arch="noarch"
@@ -12,7 +12,10 @@ options="!strip"
 source="moka-icon-theme-$pkgver.tar.gz::https://github.com/snwh/moka-icon-theme/archive/v$pkgver.tar.gz"
 
 build() {
-	meson --prefix=/usr output
+	meson \
+		--prefix=/usr \
+		--buildtype=plain \
+		output
 	ninja -C output
 }
 
