--- a/testing/openhmd/APKBUILD
+++ b/testing/openhmd/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=openhmd
 pkgver=0.3.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Free and Open Source API and drivers for immersive (VR) technology"
 url="http://www.openhmd.net/"
 arch="all"
@@ -14,8 +14,9 @@ options="!check" # https://github.com/OpenHMD/OpenHMD/issues/248
 
 build() {
 	meson \
-		--prefix /usr \
-		--libdir /usr/lib \
+		--prefix=/usr \
+		--libdir=/usr/lib \
+		--buildtype=plain \
 		-Dexamples='' \
 		. build
 	ninja -C build
