--- a/testing/snes9x/APKBUILD
+++ b/testing/snes9x/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Taner Tas <taner76@gmail.com>
 pkgname=snes9x
 pkgver=1.60
-pkgrel=0
+pkgrel=1
 pkgdesc="Super NES Emulator"
 options="!check" # No testsuite
 url="http://www.snes9x.com"
@@ -30,6 +30,7 @@ builddir="$srcdir/$pkgname-$pkgver/gtk"
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Dopengl=true \
 		-Dgtk3=true \
 		-Dpulseaudio=false \
