--- a/testing/waypipe/APKBUILD
+++ b/testing/waypipe/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Simon Zeni <simon@bl4ckb0ne.ca>
 pkgname="waypipe"
 pkgver="0.6.1"
-pkgrel=0
+pkgrel=1
 pkgdesc="A proxy for Wayland protocol applications."
 url="https://gitlab.freedesktop.org/mstoeckl/waypipe"
 arch="all"
@@ -17,6 +17,7 @@ prepare() {
 	meson build \
 		--prefix=/usr \
 		--mandir=/usr/share/man \
+		--buildtype=plain \
 		-Dwerror=false \
 		-Db_ndebug=true
 }
