--- a/testing/gnome-software/APKBUILD
+++ b/testing/gnome-software/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-software
 pkgver=3.34.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Software lets you install and update applications and system extensions"
 url="https://wiki.gnome.org/Apps/Software"
 arch="all !s390x"
@@ -30,7 +30,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
-		--buildtype=debugoptimized \
+		--buildtype=plain \
 		-Dvalgrind=false \
 		-Dmalcontent=false \
 		-Dpackagekit=false \
