--- a/testing/viewnior/APKBUILD
+++ b/testing/viewnior/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=viewnior
 _pkgname=Viewnior
 pkgver=1.7
-pkgrel=1
+pkgrel=2
 pkgdesc="A fast and simple image viewer"
 url="http://siyanpanayotov.com/project/viewnior"
 arch="all"
@@ -22,7 +22,9 @@ prepare() {
 
 build() {
 	cd "$builddir"
-	meson builddir --prefix=/usr
+	meson builddir \
+		--prefix=/usr \
+		--buildtype=plain
 	ninja -C builddir
 }
 
