--- a/testing/zathura-pdf-mupdf/APKBUILD
+++ b/testing/zathura-pdf-mupdf/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Milan P. Stanić <mps@arvanta.net>
 pkgname=zathura-pdf-mupdf
 pkgver=0.3.5
-pkgrel=0
+pkgrel=1
 pkgdesc="mupdf plugin to zathura"
 url="https://git.pwmt.org/pwmt/zathura-pdf-mupdf"
 arch="all"
@@ -16,7 +16,11 @@ options="!check"
 
 build() {
 	export=LDFLAGS="-ljpeg -lopenjp2 -ljbig2dec"
-	meson -Dlink-external=true build --prefix=/usr
+	meson \
+		--prefix=/usr \
+		--buildtype=plain \
+		-Dlink-external=true \
+		build
 	ninja -C build
 }
 
