community/perl-date-manip: upgrade to 6.80

--- a/community/perl-date-manip/APKBUILD
+++ b/community/perl-date-manip/APKBUILD
@@ -2,16 +2,14 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=perl-date-manip
 _pkgreal=Date-Manip
-pkgver=6.79
+pkgver=6.80
 pkgrel=0
 pkgdesc="Date manipulation routines"
 url="https://metacpan.org/release/Date-Manip"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-yaml-syck"
-cpanmakedepends="perl-test-inter"
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends perl-module-build"
+depends="perl perl-yaml-syck"
+makedepends="perl-test-inter perl-dev perl-module-build"
 checkdepends="perl-test-pod perl-test-pod-coverage perl-file-find-rule"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/S/SB/SBECK/Date-Manip-$pkgver.tar.gz"
@@ -35,4 +33,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="c785af53c44e4fffb370860635c795cbb9557e57551d89a3a5f7e55326d830069ee8d406c92789ffc366170a4961f4b7c1e8da056d5bd41317ce837fd5e75da8  Date-Manip-6.79.tar.gz"
+sha512sums="9d6684acc198d8a6b542c563860c081d160367c4de127eb6729cc313914e2933cf645e2b3df4b23dd73628e7789f684658c77ce9572081f0464fc397641cea92  Date-Manip-6.80.tar.gz"
