--- a/community/libevhtp/APKBUILD
+++ b/community/libevhtp/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libevhtp
 pkgver=1.2.18
-pkgrel=1
+pkgrel=2
 pkgdesc="Flexible replacement for libevent's httpd API"
 options="!check" # No testsuite
 url="https://github.com/criticalstack/libevhtp/"
@@ -15,13 +15,14 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/criticalstack/libevhtp/archi
 
 build() {
 	cmake \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_SHARED_LIBS=ON
 	make
 }
 
 package() {
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
 sha512sums="e01d771a9358fcf912578f34acd235711a3231029b453781f2992cf51cea26aa3f1eb170d3a834f15d4f9b3f37235fb006853eeee509945e2c18e3a7fbb06ae4  libevhtp-1.2.18.tar.gz"
