community/libluv: modernize

--- a/community/libluv/APKBUILD
+++ b/community/libluv/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=libluv
 _release=1
 pkgver=1.34.2.$_release
-pkgrel=0
+pkgrel=1
 pkgdesc="Bare libuv bindings for lua"
 options="!check" # No testsuite
 url="https://github.com/luvit/luv"
@@ -16,6 +16,7 @@ builddir="$srcdir/luv-${pkgver%.*}-$_release"
 
 build() {
 	cmake -B build -G Ninja \
+		-DCMAKE_BUILD_TYPE=None \
 		-DWITH_SHARED_LIBUV=ON \
 		-DLUA_BUILD_TYPE=System \
 		-DBUILD_MODULE=OFF \
