--- a/community/libcue/APKBUILD
+++ b/community/libcue/APKBUILD
@@ -1,35 +1,32 @@
-# Contributor: 
-# Maintainer: 
+# Contributor:
+# Maintainer:
 pkgname=libcue
 pkgver=2.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Library for parsing CUE sheet files"
 url="https://github.com/lipnitsk/libcue"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 arch="all"
-depends=
 makedepends="cmake bison flex"
-install=
 subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/lipnitsk/libcue/archive/v$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
-	cmake \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
-		-DBUILD_SHARED_LIBS=true .
-	make
+		-DBUILD_SHARED_LIBS=true
+	make -C build
 }
 
 check() {
-	cd "$builddir"
+	cd build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 sha512sums="32e476cb09ed2cb2d64aaba1342fb91e77e448391b493a3a794a8d2a6723a0e6097a90b11c6ad82998cb7f270f4f18c2578d7b8575f6929c2a35502e09ebc964  libcue-2.2.1.tar.gz"
