community/qimgv: modernize

--- a/community/qimgv/APKBUILD
+++ b/community/qimgv/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=qimgv
 pkgver=0.8.9
-pkgrel=0
+pkgrel=1
 pkgdesc="Cross-platform image viewer with webm support"
 url="https://github.com/easymodo/qimgv"
 options="!check"
@@ -14,19 +14,18 @@ subpackages="$pkgname-dev $pkgname-mpv"
 source="$pkgname-$pkgver.tar.gz::https://github.com/easymodo/qimgv/archive/v$pkgver.tar.gz"
 
 build() {
-	mkdir build && cd build
-	cmake .. \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DEXIV2=ON \
 		-DVIDEO_SUPPORT=ON \
 		-DKDE_SUPPORT=OFF
-	cmake --build .
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	cmake --build . --target install -- DESTDIR="$pkgdir"
+	make -C build DESTDIR="$pkgdir" install
 }
 
 mpv() {
