--- a/community/msgpack-c/APKBUILD
+++ b/community/msgpack-c/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=msgpack-c
 _pkgname=msgpack-c-cpp
 pkgver=3.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="An efficient object serialization library"
 url="https://msgpack.org"
 arch="all"
@@ -14,20 +14,17 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/msgpack/msgpack-c/archive/cp
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
-	mkdir -p "$builddir"/build
-	cd "$builddir"/build
-
-	cmake .. \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_C_FLAGS="$CFLAGS -DNDEBUG" \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS -DNDEBUG" \
 		-DCMAKE_VERBOSE_MAKEFILE=TRUE
-	make
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	make DESTDIR="$pkgdir"/ install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 sha512sums="452adce08d5da2b8ea6db9c90edeab75bf700fcef4aaac831c59c52494899764da54c104f168c817415cda2942edd796566b97e9c5f9a1400176cdd5b2a2f3db  msgpack-c-3.2.1.tar.gz"
