--- a/community/ympd/APKBUILD
+++ b/community/ympd/APKBUILD
@@ -2,27 +2,23 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=ympd
 pkgver=1.3.0
-pkgrel=8
+pkgrel=9
 pkgdesc="A standalone MPD Web GUI"
 url="https://www.ympd.org/"
 arch="all"
 license="GPL-2.0-or-later"
 makedepends="cmake libmpdclient-dev openssl-dev"
 install="$pkgname.pre-install"
-subpackages="$pkgname-doc"
-source="ympd-${pkgver}.tar.gz::https://github.com/notandy/ympd/archive/v$pkgver.tar.gz
+subpackages="$pkgname-doc $pkgname-openrc"
+source="ympd-$pkgver.tar.gz::https://github.com/notandy/ympd/archive/v$pkgver.tar.gz
 	$pkgname.initd
 	$pkgname.confd"
 
-prepare() {
-	default_prepare
-	mkdir -p "$builddir"/build
-}
-
 build() {
-	cd build
-	cmake .. -DCMAKE_INSTALL_PREFIX:PATH=/usr
-	make
+	cmake -B build . \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_BUILD_TYPE=None
+	make -C build
 }
 
 package() {
