community/qca: modernize

--- a/community/qca/APKBUILD
+++ b/community/qca/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qca
 pkgver=2.3.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Qt cryptographic architecture"
 url="https://userbase.kde.org/QCA"
 arch="all"
@@ -12,18 +12,21 @@ subpackages="$pkgname-dev $pkgname-doc lib$pkgname:libs"
 source="https://download.kde.org/stable/qca/$pkgver/qca-$pkgver.tar.xz"
 
 build() {
-	cmake -DCMAKE_INSTALL_PREFIX=/usr -DWITH_cyrus-sasl_PLUGIN=yes .
-	make
-}
-
-package() {
-	make DESTDIR="$pkgdir" install
-	mkdir -p "$pkgdir"/usr/lib/qt5
-	mv "$pkgdir"/usr/mkspecs "$pkgdir"/usr/lib/qt5
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DWITH_cyrus-sasl_PLUGIN=yes
+	make -C build
 }
 
 check() {
-	make test
+	make -C build test
+}
+
+package() {
+	make -C build DESTDIR="$pkgdir" install
+	mkdir -p "$pkgdir"/usr/lib/qt5
+	mv "$pkgdir"/usr/mkspecs "$pkgdir"/usr/lib/qt5
 }
 
 libs() {
