--- a/community/quazip/APKBUILD
+++ b/community/quazip/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=quazip
 pkgver=0.8.1
-pkgrel=0
+pkgrel=1
 pkgdesc="C++ wrapper for the Gilles Vollant's ZIP/UNZIP C package"
 options="!check" # Testsuite only available with qmake not cmake
 url="https://sourceforge.net/projects/quazip/"
@@ -18,14 +18,12 @@ source="quazip-$pkgver.tar.gz::https://github.com/stachenov/quazip/archive/v$pkg
 replaces="quazip-qt5"
 
 build() {
-	mkdir -p build
-	cd build
-	cmake \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_WITH_QT4:BOOL=OFF \
-		-DCMAKE_CXX_FLAGS="$CFLAGS -fPIC" \
-		..
-	make
+		-DCMAKE_CXX_FLAGS="$CFLAGS -fPIC"
+	make -C build
 }
 
 package() {
