community/weechat: modernize

--- a/community/weechat/APKBUILD
+++ b/community/weechat/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=weechat
 pkgver=2.7.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A fast, light, extensible ncurses-based chat client"
 url="https://weechat.org"
 arch="all"
@@ -47,6 +47,7 @@ build() {
 	mkdir -p build
 	cd build
 	cmake .. \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DENABLE_MAN=ON \
 		-DENABLE_TCL=OFF \
