--- a/community/libdbusmenu-qt/APKBUILD
+++ b/community/libdbusmenu-qt/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer:
 pkgname=libdbusmenu-qt
 pkgver=0.9.3_pre20160218
-pkgrel=2
+pkgrel=3
 pkgdesc="library to export QMenu over DBusMenu protocol"
 url="https://launchpad.net/libdbusmenu-qt"
 arch="all"
@@ -12,27 +12,21 @@ options="!check"  # requires as-of-yet unpkg'd qjson, may require dbus?
 depends_dev="qt5-qtbase-dev"
 makedepends="$depends_dev cmake doxygen"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://launchpad.net/ubuntu/+archive/primary/+files/${pkgname}_${pkgver/_pre/+16.04.}.orig.tar.gz"
+source="https://launchpad.net/ubuntu/+archive/primary/+files/libdbusmenu-qt_${pkgver/_pre/+16.04.}.orig.tar.gz"
 
 builddir="$srcdir"/"$pkgname-0.9.3+16.04.20160218"
-prepare() {
-	default_prepare
-	mkdir -p "$builddir"/build
-}
 
 build() {
-	cd "$builddir"/build
-	cmake -DCMAKE_INSTALL_PREFIX=/usr \
-	      -DCMAKE_INSTALL_LIBDIR=lib \
-	      -DCMAKE_BUILD_TYPE=RelWithDebugInfo \
-	      -DUSE_QT5=ON \
-	      "$builddir"
-	make
+	cmake -B build . \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+	    -DCMAKE_INSTALL_LIBDIR=lib \
+	    -DCMAKE_BUILD_TYPE=None \
+	    -DUSE_QT5=ON
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 sha512sums="dfaba59cedd320e6a3b5a9c0a5e13fb9e0952224e39cdd6ee3b32b03d95ac850a533e2a73835a7c0ead93b2283b9c235472bacb84e3d761ebe9e9398345314a9  libdbusmenu-qt_0.9.3+16.04.20160218.orig.tar.gz"
