--- a/testing/enet/APKBUILD
+++ b/testing/enet/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Daniel Sabogal <dsabogalcc@gmail.com>
-# Maintainer:
+# Maintainer: Alexander Willing <willing.alexander@googlemail.com>
 pkgname=enet
 pkgver=1.3.14
 pkgrel=0
