--- a/community/flatbuffers/APKBUILD
+++ b/community/flatbuffers/APKBUILD
@@ -1,38 +1,31 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=flatbuffers
 pkgver=1.11.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Memory Efficient Serialization Library"
 url="https://google.github.io/flatbuffers/"
 arch="all !s390x"
 license="Apache-2.0"
-depends=""
-depends_dev=""
-makedepends="$depends_dev cmake"
-install=""
+makedepends="cmake"
 subpackages="$pkgname-dev"
 source="flatbuffers-$pkgver.tar.gz::https://github.com/google/flatbuffers/archive/v$pkgver.tar.gz
 	0001-Add-detection-of-strtoull_l-function.patch"
-builddir="$srcdir/flatbuffers-$pkgver"
 
 build() {
-	mkdir -p "$builddir"/build
-	cd "$builddir"/build
-	cmake .. \
+	cmake -B build . \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DFLATBUFFERS_BUILD_SHAREDLIB=on \
-		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+		-DFLATBUFFERS_BUILD_SHAREDLIB=ON \
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DCMAKE_BUILD_TYPE=None
+	make -C build
 }
 
 check() {
-	cd "$builddir"/build
-	make test
+	make -C build test
 }
 
 package() {
-	cd "$builddir"/build
-	make install DESTDIR="$pkgdir"
+	make install -C build DESTDIR="$pkgdir"
 	install -Dm755 "$builddir"/build/flatc \
 		"$pkgdir"/usr/bin/flatc
 }
