testing/enet: don't use $pkgname in source url

--- a/testing/enet/APKBUILD
+++ b/testing/enet/APKBUILD
@@ -9,7 +9,7 @@ url="http://enet.bespin.org"
 arch="all"
 license="MIT"
 subpackages="$pkgname-dev"
-source="http://enet.bespin.org/download/$pkgname-$pkgver.tar.gz"
+source="http://enet.bespin.org/download/enet-$pkgver.tar.gz"
 
 build() {
 	./configure --prefix=/usr --disable-static
