community/rapidjson: modernize

--- a/community/rapidjson/APKBUILD
+++ b/community/rapidjson/APKBUILD
@@ -3,46 +3,40 @@
 # Note: This package contains only header files.
 pkgname=rapidjson
 pkgver=1.1.0
-pkgrel=3
-pkgdesc="A fast JSON parser/generator for C++ with both SAX/DOM style API"
+pkgrel=4
+pkgdesc="Fast JSON parser/generator for C++ with both SAX/DOM style API"
 url="http://rapidjson.org/"
 arch="noarch"
 license="MIT"
-depends_dev="cmake"
-makedepends="$depends_dev"
+makedepends="cmake"
 checkdepends="gtest gtest-dev"
 subpackages="$pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/miloyip/$pkgname/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/miloyip/rapidjson/archive/v$pkgver.tar.gz
 	do-not-include-gtest-src-dir.patch
 	disable-march-cxx-flag.patch
 	disable-Werror.patch
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	mkdir -p "$builddir"/build
-	cd "$builddir"/build
 
-	cmake .. \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_VERBOSE_MAKEFILE=ON \
 		-DRAPIDJSON_BUILD_DOC=OFF \
 		-DRAPIDJSON_BUILD_EXAMPLES=OFF \
 		-DGTESTSRC_FOUND=ON \
-		-DGTEST_SOURCE_DIR=. \
-		&& make
+		-DGTEST_SOURCE_DIR=.
+	make -C build
 }
 
 check() {
-	cd "$builddir"/build
-
+	cd build
 	ctest -E '.*valgrind.*' -V .
 }
 
 package() {
-	cd "$builddir"/build
-
-	make install DESTDIR="$pkgdir" || return 1
+	make -C build install DESTDIR="$pkgdir"
 
 	# Remove examples and readme.
 	rm -r "$pkgdir"/usr/share
