--- a/main/openvpn-auth-ldap/APKBUILD
+++ b/main/openvpn-auth-ldap/APKBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=openvpn-auth-ldap
 pkgver=2.0.4
-pkgrel=0
+pkgrel=1
 pkgdesc="LDAP authentication and authorization plugin for OpenVPN 2.x"
-url="http://code.google.com/p/openvpn-auth-ldap/"
+url="https://github.com/threerings/openvpn-auth-ldap/"
 arch="all"
-license="GPL"
+license="BSD-3-Clause"
 depends=
 makedepends="automake autoconf re2c openldap-dev openvpn-dev gcc-objc"
 install=
