community/gammu: modernize

--- a/community/gammu/APKBUILD
+++ b/community/gammu/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: ScrumpyJack <scrumpyjack@st.ilet.to>
 pkgname=gammu
 pkgver=1.41.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Gammu provides an abstraction layer for cell phones access"
 options="!check" # 466 - test_sql_time (Failed)
 url="https://wammu.eu/"
@@ -19,21 +19,23 @@ source="https://dl.cihar.com/gammu/releases/gammu-$pkgver.tar.bz2
 	"
 
 build() {
-	cmake . -DBUILD_SHARED_LIBS=ON \
-		-DCMAKE_INSTALL_PREFIX="/usr" \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DBUILD_SHARED_LIBS=ON \
+		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DWITH_NOKIA_SUPPORT=ON \
 		-DWITH_BLUETOOTH=ON \
 		-DWITH_IRDA=ON \
-		-DLIBINTL_LIBRARIES:STRING=intl
-	make
+		-DLIBINTL_LIBRARIES=intl
+	make -C build
 }
 
 check() {
-	make test
+	make -C build test
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 _smsd() {
