main/openvpn-auth-ldap: minor abuild improvements

--- a/main/openvpn-auth-ldap/APKBUILD
+++ b/main/openvpn-auth-ldap/APKBUILD
@@ -6,17 +6,17 @@ pkgdesc="LDAP authentication and authorization plugin for OpenVPN 2.x"
 url="https://github.com/threerings/openvpn-auth-ldap/"
 arch="all"
 license="BSD-3-Clause"
-depends=
+depends="openvpn"
 makedepends="automake autoconf re2c openldap-dev openvpn-dev gcc-objc"
-install=
-subpackages=
 source="https://github.com/threerings/openvpn-auth-ldap/archive/auth-ldap-$pkgver.tar.gz"
-builddir="$srcdir"/openvpn-auth-ldap-auth-ldap-$pkgver
+builddir="$srcdir/$pkgname-auth-ldap-$pkgver"
 options="!check"
 
 prepare() {
 	default_prepare
-	(autoconf && autoheader)
+
+	autoconf
+	autoheader
 	update_config_sub
 }
 
