main/openvpn-auth-ldap: add check

--- a/main/openvpn-auth-ldap/APKBUILD
+++ b/main/openvpn-auth-ldap/APKBUILD
@@ -10,7 +10,6 @@ depends="openvpn"
 makedepends="automake autoconf re2c openldap-dev openvpn-dev gcc-objc"
 source="https://github.com/threerings/openvpn-auth-ldap/archive/auth-ldap-$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-auth-ldap-$pkgver"
-options="!check"
 
 prepare() {
 	default_prepare
@@ -33,6 +32,10 @@ build() {
 		CFLAGS="-fPIC" \
 		OBJCFLAGS="-std=gnu11"
 	make
+}
+
+check() {
+	make -C tests test
 }
 
 package() {
