--- a/community/cpputest/APKBUILD
+++ b/community/cpputest/APKBUILD
@@ -2,44 +2,35 @@
 # Maintainer: Shiva Velmurugan <shiv@shiv.me>
 pkgname=cpputest
 pkgver=3.8
-pkgrel=1
+pkgrel=2
 pkgdesc="A unit testing and mocking framework for C/C++"
 url="http://cpputest.github.io/"
 arch="all"
-license="BSD"
+license="BSD-3-Clause"
 options="!dbg"
 makedepends="cmake"
-subpackages="$pkgname-doc"
-source="https://github.com/cpputest/$pkgname/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz
+source="https://github.com/cpputest/cpputest/releases/download/v$pkgver/cpputest-$pkgver.tar.gz
 	test-s390x.patch
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	mkdir -p "$builddir"/build
-	cd "$builddir"/build
-
-	cmake .. -DCMAKE_INSTALL_PREFIX=/usr
-	make
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX=/usr
+	make -C build
 }
 
 check() {
-	cd "$builddir"/build
-	make test
+	make -C build test
 }
 
 package() {
-	cd "$builddir"/build
-
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 
 	mkdir -p "$pkgdir"/usr/lib/cmake
 	mv "$pkgdir"/usr/lib/CppUTest/cmake \
 		"$pkgdir"/usr/lib/cmake/CppUTest
 	rmdir "$pkgdir"/usr/lib/CppUTest
-
-	install -Dm644 ../COPYING \
-		"$pkgdir"/usr/share/licenses/$pkgname/COPYING
 }
 
 sha512sums="a9592bdc9ffab8b42026ef2010f504e7e37d77fc2f197f89d23f7c9285a101059a0ec66418b914db0383974616d31b26addd1938fb27f45c3e7d9496ed0a0fac  cpputest-3.8.tar.gz
