main/openvpn-auth-ldap: install default config

--- a/main/openvpn-auth-ldap/APKBUILD
+++ b/main/openvpn-auth-ldap/APKBUILD
@@ -1,14 +1,17 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=openvpn-auth-ldap
 pkgver=2.0.4
-pkgrel=1
+pkgrel=2
 pkgdesc="LDAP authentication and authorization plugin for OpenVPN 2.x"
 url="https://github.com/threerings/openvpn-auth-ldap/"
 arch="all"
 license="BSD-3-Clause"
 depends="openvpn"
 makedepends="automake autoconf re2c openldap-dev openvpn-dev gcc-objc"
-source="https://github.com/threerings/openvpn-auth-ldap/archive/auth-ldap-$pkgver.tar.gz"
+pkggroups="openvpn"
+source="https://github.com/threerings/openvpn-auth-ldap/archive/auth-ldap-$pkgver.tar.gz
+	default-config.patch
+	"
 builddir="$srcdir/$pkgname-auth-ldap-$pkgver"
 
 prepare() {
@@ -41,6 +44,9 @@ check() {
 package() {
 	mkdir -p "$pkgdir"/usr/lib
 	make DESTDIR="$pkgdir" install
+
+	install -D -m 640 -g openvpn auth-ldap.conf "$pkgdir"/etc/openvpn/auth-ldap.conf
 }
 
-sha512sums="ffa1f1617acd3f4e96d3abea7e5611d8b8406c92ff1298ac0520f2d42f188116904187d3ca8c0ae88e0bcc6449ec4c8494a18770a4635c1ee7301baaaddfa12e  auth-ldap-2.0.4.tar.gz"
+sha512sums="ffa1f1617acd3f4e96d3abea7e5611d8b8406c92ff1298ac0520f2d42f188116904187d3ca8c0ae88e0bcc6449ec4c8494a18770a4635c1ee7301baaaddfa12e  auth-ldap-2.0.4.tar.gz
+7d33287dde5ef338797d395f6e254d6e3116cbc274f89fc44b0de7f624d51c23c5734229279023c5b818d1ce7313f761770ee2f60c1975713feefdf03f040374  default-config.patch"
