--- a/community/h2o/APKBUILD
+++ b/community/h2o/APKBUILD
@@ -2,44 +2,39 @@
 # Maintainer: Bennett Goble <nivardus@gmail.com>
 pkgname=h2o
 pkgver=2.2.6
-pkgrel=1
+pkgrel=2
 pkgdesc="An optimized HTTP/1, HTTP/2 server written in C"
 url="https://h2o.examp1e.net"
 arch="all"
 license="MIT"
-depends=""
 makedepends="cmake ruby ruby-dev bison zlib-dev wslay-dev openssl-dev libuv-dev yaml-dev"
 install="$pkgname.pre-install"
-subpackages="$pkgname-dev $pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/$pkgname/$pkgname/archive/v$pkgver.tar.gz
-	h2o-libressl-2.7.0.patch
+subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc"
+source="$pkgname-$pkgver.tar.gz::https://github.com/h2o/h2o/archive/v$pkgver.tar.gz
 	h2o.conf
 	h2o.initd
-	h2o.logrotate"
-
-builddir="$srcdir/$pkgname-$pkgver"
+	h2o.logrotate
+	"
 
 # secfixes:
 #   2.2.6-r0:
-#   - CVE-2019-9512
-#   - CVE-2019-9514
-#   - CVE-2019-9515
+#     - CVE-2019-9512
+#     - CVE-2019-9514
+#     - CVE-2019-9515
 
 build() {
-	cd "$builddir"
-	cmake \
-		-DBUILD_SHARED_LIBS=on \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DBUILD_SHARED_LIBS=ON \
 		-DCMAKE_INSTALL_LIBDIR=/usr/lib \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DWITH_MRUBY=on \
-		.
-	make
-	make libh2o
+		-DWITH_MRUBY=ON
+	make -C build
+	make -C build libh2o
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 
 	install -m755 -D "$srcdir"/$pkgname.initd \
 		"$pkgdir/etc/init.d/$pkgname"
@@ -57,7 +52,6 @@ package() {
 }
 
 sha512sums="f2f28905c01782a0432c9dfdb2f21054e0a4741ac4c5f26802d4b439d0172840aa215aba5dc7c9af62275dcc24de105674a3819384dc38246e43ce3e8263eb20  h2o-2.2.6.tar.gz
-ac0b587cc55124a350b42470d1f514f6cb4624914f92bcc3ed125909e98ef62101d452c098bb381f71b1becd7d21bc6a0d33c3890db72e92976d373406623e6f  h2o-libressl-2.7.0.patch
 444f55c3eaae1f349223036086e45c983ea8be89e793068537ec25488c4065174bc509d0987ddc65a0357cb8acfec272e90d13ea7cdadf9cf112953d857aa574  h2o.conf
 e93e66a6b00b1bff94e37489c5fdf99d9d657adc63975ec54be30f8da23dafe7d7389f02a6452ed819efc9d8398aa716782a7fd6d8509621a975ed954b73bef9  h2o.initd
 3d2c9e36c48cbb974d0691e4af8e9eb8f13e3bebb98a30417cdc87e76a4b5cddc4e4f665ebea26b95174287b95d002fdc3363f30ffcf15247fcd0530fe1abfcc  h2o.logrotate"
