community/rcon: modernize

--- a/community/rcon/APKBUILD
+++ b/community/rcon/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=rcon
 pkgver=0.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Source RCON client for command line."
 url="https://github.com/n0la/rcon"
 arch="all !s390x"
@@ -13,16 +13,18 @@ subpackages="$pkgname-doc $pkgname-bash-completion:bashcomp:noarch"
 source="$pkgname-$pkgver.tar.gz::https://github.com/n0la/rcon/archive/$pkgver.tar.gz"
 
 build() {
-	cmake . -DCMAKE_INSTALL_PREFIX=/usr
-	make
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX=/usr
+	make -C build
 }
 
 check() {
-	make test
+	make -C build test
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 bashcomp() {
@@ -30,8 +32,7 @@ bashcomp() {
 	pkgdesc="Bash completions for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
 
-	mkdir -p "$subpkgdir"/usr/share/
-	mv "$pkgdir"/usr/share/bash-completion "$subpkgdir"/usr/share/
+	amove usr/share/bash-completion
 }
 
 sha512sums="99554288ed6a7061e68d28b60c77664ef21591aa9948a09c25a0b256b13eb06197b97ee44feb9f79bdef68ca61516b0235126948cbd13dff550f843509b93d9e  rcon-0.4.tar.gz"
