community/podofo: modernize

--- a/community/podofo/APKBUILD
+++ b/community/podofo/APKBUILD
@@ -2,20 +2,17 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=podofo
 pkgver=0.9.6
-pkgrel=1
+pkgrel=2
 pkgdesc="A C++ library to work with the PDF file format"
 url="http://podofo.sourceforge.net"
 arch="all"
 license="GPL-2.0-only"
-depends=
 makedepends="tiff-dev libpng-dev fontconfig-dev
 cmake lua-dev openssl-dev libidn-dev"
-install=""
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz
+source="https://downloads.sourceforge.net/podofo/podofo-$pkgver.tar.gz
 	podofo-cmake-3.12.patch
 	"
-builddir="$srcdir"/$pkgname-$pkgver
 
 # secfixes:
 #   0.9.5-r0:
@@ -27,19 +24,17 @@ builddir="$srcdir"/$pkgname-$pkgver
 #     - CVE-2017-6849
 
 build() {
-	cd "$builddir"
-	mkdir build
-	cd build
-	cmake -DCMAKE_INSTALL_PREFIX=/usr .. \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DPODOFO_BUILD_SHARED=1 \
 		-DPODOFO_HAVE_JPEG_LIB=1 \
 		-DPODOFO_HAVE_PNG_LIB=1 \
 		-DPODOFO_HAVE_TIFF_LIB=1
-	make || return 1
+	make -C build
 }
 package() {
-	cd "$builddir"/build
-	make DESTDIR="$pkgdir" install || return 1
+	make -C build DESTDIR="$pkgdir" install
 }
 
 sha512sums="35c1a457758768bdadc93632385f6b9214824fead279f1b85420443fb2135837cefca9ced476df0d47066f060e9150e12fcd40f60fa1606b177da433feb20130  podofo-0.9.6.tar.gz
