--- a/community/uncrustify/APKBUILD
+++ b/community/uncrustify/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=uncrustify
 pkgver=0.70.1
-pkgrel=0
-pkgdesc="A source code beautifier"
+pkgrel=1
+pkgdesc="Source code beautifier"
 url="https://github.com/uncrustify/uncrustify"
 arch="all"
 license="GPL-2.0-or-later"
@@ -13,24 +13,20 @@ builddir="$srcdir/uncrustify-uncrustify-$pkgver"
 
 build() {
 	[ "$CARCH" = "s390x" ] && sed -i '/^12004/d' tests/c-sharp.test
-	mkdir -p build
-	cd build
-	cmake -DCMAKE_INSTALL_PREFIX=/usr ..
-	make
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX=/usr
+	make -C build
 }
 
 check() {
-	cd "$builddir/build"
-	make test
+	make -C build test
 }
 
 package() {
-	install -d -m755 "$pkgdir"/usr/share/$pkgname
-	install -m644 etc/*.cfg "$pkgdir"/usr/share/$pkgname
-	install -Dm644 COPYING "$pkgdir"/usr/share/licenses/$pkgname/COPYING
+	make -C build DESTDIR="$pkgdir" PREFIX=/usr install
 
-	cd build
-	make DESTDIR="$pkgdir" PREFIX=/usr install
+	install -Dm644 etc/*.cfg -t "$pkgdir"/usr/share/$pkgname
 }
 
 sha512sums="d28f02d5c82e3b398fd0391fe49eb1260a905e525c7c4b513ccea68ffff480d96cd77936267dd7d6870a59903c72578efc0ff85696c877caf1f1c89160c79334  uncrustify-0.70.1.tar.gz"
