--- a/community/wt/APKBUILD
+++ b/community/wt/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=wt
 pkgver=4.2.1
-pkgrel=0
-pkgdesc="A C++ library and application server for developing and deploying web applications"
+pkgrel=1
+pkgdesc="C++ library and application server for developing and deploying web applications"
 url="https://www.webtoolkit.eu"
 arch="all"
 license="GPL-2.0-or-later WITH openssl-exception"
@@ -18,25 +18,23 @@ subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/kdeforche/wt/archive/$pkgver.tar.gz"
 
 build() {
-	mkdir -p build && cd build
-	CXXFLAGS="-fpermissive" \
-	cmake \
-	      -DCONNECTOR_HTTP=ON \
-	      -DWT_WRASTERIMAGE_IMPLEMENTATION=GraphicsMagick \
-	      -DCMAKE_INSTALL_PREFIX=/usr \
-	      -DWEBUSER=$pkgusers \
-	      -DWEBGROUP=$pkggroups \
-	      -DRUNDIR="$pkgdir"/var/run/wt \
-	      -DUSE_SYSTEM_SQLITE3=ON \
-	      -DINSTALL_EXAMPLES=ON \
-	      -DBUILD_EXAMPLES=OFF \
-	..
-	make
+	CXXFLAGS="$CXXFLAGS -fpermissive" \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+	    -DCONNECTOR_HTTP=ON \
+	    -DWT_WRASTERIMAGE_IMPLEMENTATION=GraphicsMagick \
+	    -DCMAKE_INSTALL_PREFIX=/usr \
+	    -DWEBUSER=$pkgusers \
+	    -DWEBGROUP=$pkggroups \
+	    -DRUNDIR="$pkgdir"/var/run/wt \
+	    -DUSE_SYSTEM_SQLITE3=ON \
+	    -DINSTALL_EXAMPLES=ON \
+	    -DBUILD_EXAMPLES=OFF
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	make DESTDIR=$pkgdir install
+	make -C build DESTDIR=$pkgdir install
 	rm -rf $pkgdir/usr/cmake
 	rm -rf $pkgdir/var/run
 }
