--- a/community/aspcud/APKBUILD
+++ b/community/aspcud/APKBUILD
@@ -2,29 +2,27 @@
 # Maintainer: Anil Madhavapeddy <anil@recoil.org>
 pkgname=aspcud
 pkgver=1.9.4
-pkgrel=2
+pkgrel=3
 pkgdesc="Package dependency solver"
 url="https://potassco.org/aspcud/"
 arch="all"
 license="MIT"
 depends="boost gringo clasp"
 makedepends="boost-dev cmake re2c"
-install=""
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/potassco/aspcud/archive/v$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
-	mkdir build
-	cd build
-	cmake .. -DGRINGO_LOC=/usr/bin/gringo -DCLASP_LOC=/usr/bin/clasp -DCMAKE_INSTALL_PREFIX=/usr
-	make
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DGRINGO_LOC=/usr/bin/gringo \
+		-DCLASP_LOC=/usr/bin/clasp \
+		-DCMAKE_INSTALL_PREFIX=/usr
+	make -C build
 }
 
 package() {
-	cd "${builddir}/build"
-	make DESTDIR="${pkgdir}" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 sha512sums="6bb04fca0d5df1bfc2d34974386899821790154e10e988dfd34ceada005970ac8dd0bec560b35e20195aa529ac7f73baa07c7d81d9744127e57afece04b2e574  aspcud-1.9.4.tar.gz"
