--- a/main/py3-click/APKBUILD
+++ b/main/py3-click/APKBUILD
@@ -1,29 +1,32 @@
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-click
-_pkgname=click
-pkgver=6.7
-pkgrel=5
+_pkgname=Click
+pkgver=7.0
+pkgrel=0
 pkgdesc="A simple wrapper around optparse for powerful command line utilities"
-url="http://click.pocoo.org/"
+url="https://click.palletsprojects.com"
 arch="noarch"
 license="BSD-3-Clause"
 depends="python3"
 makedepends="py3-setuptools"
-source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
+checkdepends="py3-pytest"
+source="https://files.pythonhosted.org/packages/source/c/click/Click-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 replaces="py-click" # Backwards compatibility
 provides="py-click=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
+check() {
+	PYTHONPATH="$PWD"/build/lib pytest -v tests
+}
+
 package() {
-	cd "$builddir"
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="d454369fe1acb01c2210a61e15f45ac9cc77102c93345257f4ef3090bd8f31f1ccc49d9fd6ea670cddca9f715ad5db29368b4eecd95abff50d1033c4f7a967d6  click-6.7.tar.gz"
+sha512sums="a7632989cde7c7eb2f535915a7a8220cb48d1ab8dd3527c4103518d4ac86287fea3488a5e0ce9f2968a4b6c52fe6ca4bc2480d0bf10f7084a4b17d31e803a92b  Click-7.0.tar.gz"
