testing/py3-py-cpuinfo: fix url
and update pkgdesc

--- a/testing/py3-py-cpuinfo/APKBUILD
+++ b/testing/py3-py-cpuinfo/APKBUILD
@@ -3,9 +3,9 @@
 pkgname=py3-py-cpuinfo
 _pkgname=py-cpuinfo
 pkgver=5.0.0
-pkgrel=4
-pkgdesc="A module for getting CPU info"
-url="https://github.com/workhorsy/py3-cpuinfo"
+pkgrel=5
+pkgdesc="Pure-Python module for getting CPU info"
+url="https://github.com/workhorsy/py-cpuinfo"
 arch="noarch"
 license="MIT"
 depends="python3"
