community/py3-pybind11: modernize

--- a/community/py3-pybind11/APKBUILD
+++ b/community/py3-pybind11/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=py3-pybind11
 _pkgname=pybind11
 pkgver=2.4.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Seamless operability between C++11 and Python"
 url="https://github.com/pybind/pybind11"
 arch="noarch"
@@ -30,24 +30,23 @@ build() {
 
 	python3 setup.py build
 
-	mkdir -p "$builddir"/build-cmake
-	cd "$builddir"/build-cmake
-	cmake .. \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DPYTHON_EXECUTABLE=/usr/bin/python3 \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DUSE_PYTHON_INCLUDE_DIR=FALSE
-	make
+	make -C build
 }
 
 check() {
-	make -C build-cmake check
+	make -C build check
 }
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir" \
 		--install-headers=/usr/include/pybind11 --skip-build
 
-	DESTDIR="$pkgdir" make -C build-cmake install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 dev() {
