community/libphonenumber: modernize

--- a/community/libphonenumber/APKBUILD
+++ b/community/libphonenumber/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=libphonenumber
 pkgver=8.11.4
-pkgrel=2
+pkgrel=3
 pkgdesc="Library for parsing, formatting, and validating international phone numbers."
 url="https://github.com/googlei18n/libphonenumber"
 arch="all"
@@ -12,24 +12,22 @@ makedepends="$depends_dev cmake gtest-dev"
 checkdepends="gtest"
 subpackages="$pkgname-static $pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/googlei18n/libphonenumber/archive/v$pkgver.tar.gz"
+builddir="$srcdir/$pkgname-$pkgver/cpp"
 
 build() {
-	cd "$builddir/cpp"
-	# TODO: Switch to the CMake None build type.
-	cmake \
-		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
-	cd "$builddir/cpp"
-	./libphonenumber_test
+	./build/libphonenumber_test
 }
+
 package() {
-	cd "$builddir/cpp"
-	DESTDIR="$pkgdir" make install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 sha512sums="6ef958db4b9470a3bfc8cc7169213ef0a7e90247f3e1911e179602810b2a8f8c227422c4f624aa5eb32497712fae878f1cfc053b9189cdc2d4102aa73c6dcfd1  libphonenumber-8.11.4.tar.gz"
