community/extra-cmake-modules: modernize

--- a/community/extra-cmake-modules/APKBUILD
+++ b/community/extra-cmake-modules/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=extra-cmake-modules
 pkgver=5.67.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Extra CMake modules"
 url="https://projects.kde.org/projects/kdesupport/extra-cmake-modules"
 arch="noarch !armhf" # qtdeclarative
@@ -14,30 +14,23 @@ checkdepends="qt5-qtbase-dev qt5-qtquickcontrols2-dev"
 source="http://download.kde.org/stable/frameworks/${pkgver%.*}/extra-cmake-modules-$pkgver.tar.xz"
 subpackages="$pkgname-doc"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_TESTING=ON \
 		-DSphinx_BUILD_EXECUTABLE=/usr/bin/sphinx-build
-	make
+	make -C build
 }
 
 check() {
-	cd "$builddir"/build
+	cd build
 	# Broken tests
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest -E "(KDEFetchTranslations|KDEInstallDirsTest.relative_or_absolute_usr|KDEInstallDirsTest.relative_or_absolute_qt)"
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install/fast
+	make -C build DESTDIR="$pkgdir" install/fast
 }
 
 sha512sums="1a0e185ea4eac16d57c34f140a4709c0bcd9baaa7e0727ab5c1bfee88fe08efe23dc3634d8f73abade98ad6f2dbf529563e0778f0fbeddaa50b435e12b674229  extra-cmake-modules-5.67.0.tar.xz"
