community/mopidy: enable tests

--- a/community/mopidy/APKBUILD
+++ b/community/mopidy/APKBUILD
@@ -5,7 +5,6 @@ pkgname=mopidy
 pkgver=3.0.1
 pkgrel=0
 pkgdesc="Mopidy is an extensible music server"
-options="!check" # Requires dependency testing/py-responses
 url="https://www.mopidy.com/"
 arch="noarch"
 license="Apache-2.0"
@@ -13,6 +12,7 @@ depends="python3 py3-pykka py3-tornado gst-plugins-base gst-plugins-good
 	gst-plugins-ugly py3-gst py3-setuptools py3-libxml2 py3-requests
 	py3-six"
 makedepends="python3-dev py3-sphinx graphviz"
+checkdepends="py3-pytest py3-responses"
 install="$pkgname.pre-install $pkgname.post-deinstall"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="https://files.pythonhosted.org/packages/source/M/Mopidy/Mopidy-$pkgver.tar.gz
@@ -20,7 +20,6 @@ source="https://files.pythonhosted.org/packages/source/M/Mopidy/Mopidy-$pkgver.t
 	logging.conf
 	mopidy.initd
 	"
-
 builddir="$srcdir/Mopidy-$pkgver"
 
 pkgusers="mopidy"
