testing/py3-evohome-client: enable tests

--- a/testing/py3-evohome-client/APKBUILD
+++ b/testing/py3-evohome-client/APKBUILD
@@ -4,12 +4,12 @@ pkgname=py3-evohome-client
 pkgver=0.3.3
 pkgrel=1
 pkgdesc="Python client to access the Evohome web service"
-options="!check" # Requires unpackaged requests-mock
 url="https://github.com/watchforstock/evohome-client"
 arch="noarch"
 license="Apache-2.0"
 depends="python3 py3-requests"
 makedepends="py3-setuptools"
+checkdepends="py3-nose py3-requests-mock"
 source="evohome-client-$pkgver.tar.gz::https://github.com/watchforstock/evohome-client/archive/$pkgver.tar.gz"
 builddir="$srcdir"/evohome-client-$pkgver
 
@@ -18,6 +18,11 @@ provides="py-evohome-client=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
 	python3 setup.py build
+}
+
+check() {
+	mkdir test-reports
+	nosetests
 }
 
 package() {
