--- a/main/fribidi/APKBUILD
+++ b/main/fribidi/APKBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=fribidi
-pkgver=1.0.8
+pkgver=1.0.9
 pkgrel=0
 pkgdesc="Free Implementation of the Unicode Bidirectional Algorithm"
 url="https://github.com/fribidi/fribidi"
 arch="all"
 license="LGPL-2.0-or-later"
 subpackages="$pkgname-doc $pkgname-static $pkgname-dev"
-source="https://github.com/fribidi/fribidi/releases/download/v$pkgver/fribidi-$pkgver.tar.bz2"
+source="https://github.com/fribidi/fribidi/releases/download/v$pkgver/fribidi-$pkgver.tar.xz"
 
 # secfixes:
 #   1.0.7-r1:
@@ -18,9 +18,7 @@ build() {
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--disable-docs \
-		--enable-static \
-		--with-glib=no
+		--enable-static
 	make
 }
 
@@ -32,4 +30,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="d66b1524b26d227fd6a628f438efb875c023ae3be708acaaad11f1f62d0902de0a5f57124458291ef2b0fcd89356c52ab8ae5559b0b5a93fa435b92f1d098ba2  fribidi-1.0.8.tar.bz2"
+sha512sums="e66989830941172fa003c8b9376719282fa1039592a1e158e975cab81ce8dcb2755453c64906a8464c047f9e9154e012d9bd37256b1f463e235648a13e4601ed  fribidi-1.0.9.tar.xz"
