--- a/community/inkscape/APKBUILD
+++ b/community/inkscape/APKBUILD
@@ -25,10 +25,12 @@ makedepends="
 	tar
 	"
 depends="desktop-file-utils"
-checkdepends="bash py-lxml py-numpy>=1.14.3-r1"
+checkdepends="bash py3-lxml py3-numpy>=1.14.3-r1"
 subpackages="$pkgname-doc $pkgname-lang $pkgname-view"
 source="https://launchpad.net/inkscape/${pkgver%.*}.x/$pkgver/+download/inkscape-$pkgver.tar.bz2
 	poppler-082.patch
+	poppler-083.patch
+	fix-python.patch
 	"
 options="!check" # cxxtest hangs at least on x86_64
 
@@ -86,4 +88,6 @@ doc() {
 }
 
 sha512sums="b9034605a79cd8aea808edf42e284819951ae1ea67778f0922f4c10224e94aca6c844acbc2294625773f0a7047d4e32ccdada876238a792a2c17db172c88e120  inkscape-0.92.4.tar.bz2
-adf360e99aaf2635a227bd3b59e03db688eef4713858cfbae2f02ed6368d4314cd490f53da3126555d6fc9a2b28072137c79169c18515331acd83ca643287432  poppler-082.patch"
+adf360e99aaf2635a227bd3b59e03db688eef4713858cfbae2f02ed6368d4314cd490f53da3126555d6fc9a2b28072137c79169c18515331acd83ca643287432  poppler-082.patch
+12c16bf84b467cb4e4f5d970bcdf6db15e55d61dad73bef2fa9e63bd046a027f5667c58e38876b9836d235a85390c5aa2a3241664d69c94b1951c231acc0d971  poppler-083.patch
+b4910e42b6f3f73bbf91c9c566dfed2cf8d7d7426e84063dd6036cfef8ee52b4e9538d9d7833338bef06774022bc33c8f7f09ea601a7b81dfd91b8b5be0ff7a9  fix-python.patch"
