--- a/community/inkscape/APKBUILD
+++ b/community/inkscape/APKBUILD
@@ -5,7 +5,7 @@ pkgrel=6
 pkgdesc="A vector-based drawing program - svg compliant"
 url="https://inkscape.org/"
 arch="all"
-license="GPL LGPL"
+license="GPL-2.0-or-later AND LGPL-2.1-or-later"
 makedepends="
 	autoconf
 	automake
