testing/mycli: enable tests

--- a/testing/mycli/APKBUILD
+++ b/testing/mycli/APKBUILD
@@ -7,7 +7,6 @@ pkgdesc="MySQL CLI with autocompletion and syntax highlighting"
 url="https://www.mycli.net"
 arch="noarch"
 license="BSD-3-Clause"
-options="!check" # builders /dev/tty not accessible
 depends="python3
 	py3-click
 	py3-pygments
@@ -19,15 +18,14 @@ depends="python3
 	py3-cli_helpers"
 makedepends="python3-dev py3-setuptools"
 checkdepends="py3-pytest py3-mock"
-source="$pkgname-$pkgver.tar.gz::https://files.pythonhosted.org/packages/source/${pkgname:0:1}/$pkgname/$pkgname-$pkgver.tar.gz
-	"
-
-check() {
-	python3 -m pytest test
-}
+source="$pkgname-$pkgver.tar.gz::https://files.pythonhosted.org/packages/source/m/mycli/mycli-$pkgver.tar.gz"
 
 build() {
 	python3 setup.py build
+}
+
+check() {
+	python3 -m pytest -v test
 }
 
 package() {
