--- a/community/texlive/APKBUILD
+++ b/community/texlive/APKBUILD
@@ -4,15 +4,13 @@ pkgname=texlive
 pkgver=20190410
 pkgrel=7
 pkgdesc="Comprehensive TeX document production system"
-url="http://tug.org/texlive/"
+url="https://tug.org/texlive/"
 arch="all"
 license="GPL"
 depends="perl texmf-dist>=2018.50036"
-depends_dev=""
 makedepends="freetype-dev libpng-dev poppler-dev icu-dev harfbuzz-dev
 	cairo-dev pixman-dev zziplib-dev libpaper-dev graphite2-dev
 	libxmu-dev fontconfig-dev libxaw-dev motif-dev"
-install=""
 triggers="$pkgname.trigger=/usr/share/texmf-dist"
 subpackages="
 	$pkgname-static
@@ -24,11 +22,14 @@ subpackages="
 	$pkgname-xetex:xetex
 	$pkgname-luatex:lua
 	"
+# Source for poppler patches - https://git.archlinux.org/svntogit/packages.git/plain/texlive-bin/trunk
 source="
 	ftp://ftp.tug.org/texlive/historic/${pkgver:0:4}/texlive-$pkgver-source.tar.xz
-	poppler-076.patch
+	poppler-084.patch
+	poppler-086.patch
 	"
-builddir="$srcdir"/texlive-${pkgver}-source
+
+builddir="$srcdir"/texlive-$pkgver-source
 options="!check" # No unit tests provided
 
 _luatex="dvilualatex dviluatex lualollipop lualatex"
@@ -39,7 +40,7 @@ _xetex="xelatex xelollipop"
 _dvi="afm2tfm bbox dvigif dvipng dvips epsffit extractres includeres ps2eps psbook psjoin psnup psresize psselect pstops"
 
 # Each poppler version recently broke the API, so special treatment is required
-_poppler_ver=0.76.0
+_poppler_ver=0.86.0
 prepare() {
 	default_prepare
 
@@ -164,7 +165,7 @@ dvi() {
 
 	install -d -m 0755 "$subpkgdir"/usr/bin
 		for tool in $_dvi; do
-		mv "${pkgdir}/usr/bin/${tool}" "${subpkgdir}/usr/bin/"
+		mv "$pkgdir/usr/bin/$tool" "$subpkgdir/usr/bin/"
 	done
 }
 
@@ -219,4 +220,5 @@ xdvi() {
 }
 
 sha512sums="7759d8e668e53c0c73e48907096da9d8fb6384dd9c3342ddfb05e17d077054c5351d35256cf4e63a6da502de2f09f521979bede7209cdd5bd8ae80eba0efed2e  texlive-20190410-source.tar.xz
-46d7423bd3de21cf94a041bbffb93bdd071e1eb78a36e047909c943aeaf4bfa2832d3c2c353cc208daad501eb7d08f850dd0873a2f5135a3d0938e141f2e4baf  poppler-076.patch"
+7fe31112bb860c742289a465e7eb4ba8672261ca022fb377cfdbcbd00d7bb39ac744144505ce73bcefa07656cd3f470aa0e3bda05b5018accbd1549f2a974b20  poppler-084.patch
+87673c5ce942059adb75b6d47af605dc9d6e29080268e2557ec63f2292f639dd60c2539c649ae9b0137f379c37b5adffb3695055317710477866946c238ab5d5  poppler-086.patch"
