--- a/testing/py3-snuggs/APKBUILD
+++ b/testing/py3-snuggs/APKBUILD
@@ -1,30 +1,18 @@
 # Contributor: Holger Jaekel <holger.jaekel@gmx.de>
 # Maintainer: Holger Jaekel <holger.jaekel@gmx.de>
+pkgname=py3-snuggs
 _pkgname=snuggs
-pkgname=py3-$_pkgname
 pkgver=1.4.7
-pkgrel=0
+pkgrel=1
 pkgdesc="Snuggs are s-expressions for Numpy"
 url="https://pypi.org/project/snuggs/"
 arch="noarch"
 license="MIT"
-depends="
-	python3
-	py3-click
-	py3-numpy
-	py3-parsing
-	"
-makedepends="
-	py3-setuptools
-	"
-checkdepends="
-	pytest
-	py3-hypothesis
-	"
-source="
-	py3-snuggs-$pkgver.tar.gz::https://github.com/mapbox/snuggs/archive/$pkgver.tar.gz
-	"
-builddir="$srcdir/snuggs-$pkgver"
+depends="python3 py3-numpy py3-parsing"
+makedepends="py3-setuptools"
+checkdepends="py3-pytest py3-hypothesis"
+source="$_pkgname-$pkgver.tar.gz::https://github.com/mapbox/snuggs/archive/$pkgver.tar.gz"
+builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
 	python3 setup.py build
@@ -38,4 +26,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir" --optimize=2
 }
 
-sha512sums="c1f40e521d1b0cf15075b22b04000c74ecbd0522cdd820b8c159aac812924d877349b3f3bca93b09eed5b025a34c26665a41c7a52a8145419558b115cf8ef361  py3-snuggs-1.4.7.tar.gz"
+sha512sums="c1f40e521d1b0cf15075b22b04000c74ecbd0522cdd820b8c159aac812924d877349b3f3bca93b09eed5b025a34c26665a41c7a52a8145419558b115cf8ef361  snuggs-1.4.7.tar.gz"
