--- a/community/ddrescue/APKBUILD
+++ b/community/ddrescue/APKBUILD
@@ -1,18 +1,17 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=ddrescue
-pkgver=1.24
+pkgver=1.25
 pkgrel=0
 pkgdesc="Data recovery tool for block devices with errors"
 url="https://www.gnu.org/s/ddrescue/ddrescue.html"
 arch="all"
 license="GPL-3.0-or-later"
 subpackages="$pkgname-doc"
-source="https://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.lz"
-builddir="$srcdir/$pkgname-$pkgver"
-build() {
-	cd "$builddir"
+source="https://ftp.gnu.org/gnu/ddrescue/ddrescue-$pkgver.tar.lz"
 
-	./configure --prefix=/usr \
+build() {
+	./configure \
+		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info
@@ -20,8 +19,6 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	# XXX: Some tests fail on s390x, but only on builder, so ignore it for now.
 	case "$CARCH" in
 		s390x) make check || true;;
@@ -30,8 +27,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="2c6a86c80bad122e0c44d6f8da49239e10362fbfbdb70acf39055ce02637daa05cce4f24adac732a1bb3a6fc97cf6985dd20827e99ab3bf6bad4db015a00fbaa  ddrescue-1.24.tar.lz"
+sha512sums="90e344a618e385730836218817588f6854db6d1acdf357bf60bdba04c76382e73041dfc367ba4de60062992ee74b2da58417f6e464ffbeed10ec89fac110f4b8  ddrescue-1.25.tar.lz"
