testing/liblouis: upgrade to 3.13.0

--- a/testing/liblouis/APKBUILD
+++ b/testing/liblouis/APKBUILD
@@ -1,18 +1,16 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
-pkgname="liblouis"
-pkgver="3.12.0"
+pkgname=liblouis
+pkgver=3.13.0
 pkgrel=0
 pkgdesc="Braille translator and back-translator"
 url="http://liblouis.org/"
 arch="all"
 license="GPL-3.0-or-later"
 makedepends="help2man python3"
-install=""
 subpackages="$pkgname-static $pkgname-dev $pkgname-bin:_bin $pkgname-doc"
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/liblouis/liblouis/releases/download/v$pkgver/liblouis-$pkgver.tar.gz
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 options="!check" # Some unknown dependency is required
 
 build() {
@@ -40,4 +38,4 @@ _bin() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr
 }
 
-sha512sums="dde18b6d8627f03219e0f4805836a78672175a569fcf006ba679f2108357890bbe286136f3231c26f3ca567cc33ef9350c6e2d6c544a352638f7f243abc4cbda  liblouis-3.12.0.tar.gz"
+sha512sums="68f0205dc55a106c5707f959c1c0d3c121dfe62f263a664e6bec0780bee65cce2fb5d7033ae1c8312d1d79f7ccaf650af71906e8651b60f11219758e41051b61  liblouis-3.13.0.tar.gz"
