--- a/main/skalibs/APKBUILD
+++ b/main/skalibs/APKBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Laurent Bercot <ska-devel@skarnet.org>
 # Contributor: John Regan <john@jrjrtech.com>
 pkgname=skalibs
-pkgver=2.9.1.0
+pkgver=2.9.2.0
 pkgrel=0
-pkgdesc="A set of general-purpose C programming libraries for skarnet.org software."
+pkgdesc="Set of general-purpose C programming libraries for skarnet.org software."
 url="http://skarnet.org/software/skalibs/"
 arch="all"
 license="ISC"
@@ -12,7 +12,6 @@ subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="http://skarnet.org/software/skalibs/skalibs-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--enable-shared \
 		--enable-static \
@@ -21,7 +20,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -44,4 +42,4 @@ static() {
 	rmdir -p "$pkgdir"/usr/lib || :
 }
 
-sha512sums="a85a9397cdb10cbc42fd7ef4984a77802cf8c42abeabc8ff18de6d2e11ff97d950418aeda5f2dd66a04bd30004a5c4608e7cc6f4c7e23b91f56ef1ff59f4b6d5  skalibs-2.9.1.0.tar.gz"
+sha512sums="a351cb8d048cefa495cc35fd2758579879d5ac11d2a1fc00c694d5655aa9e430228517c01fc91bdbc70c3992f73429a68a5365cb46039a7b7bb11358f0f4506d  skalibs-2.9.2.0.tar.gz"
