main/s6-linux-init: upgrade to 1.0.4.0

--- a/main/s6-linux-init/APKBUILD
+++ b/main/s6-linux-init/APKBUILD
@@ -1,19 +1,18 @@
 # Maintainer: Laurent Bercot <ska-devel@skarnet.org>
 # Contributor: Laurent Bercot <ska-devel@skarnet.org>
 pkgname=s6-linux-init
-pkgver=1.0.3.1
+pkgver=1.0.4.0
 pkgrel=0
-pkgdesc="A set of tools to create and run an s6-based init system."
+pkgdesc="Set of tools to create and run an s6-based init system"
 url="http://skarnet.org/software/$pkgname/"
 arch="all"
 license="ISC"
 options="!check"
-makedepends="skalibs-dev execline-dev s6-dev"
+makedepends="skalibs-dev execline-dev s6-dev linux-headers"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="http://skarnet.org/software/s6-linux-init/s6-linux-init-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--enable-shared \
 		--enable-static \
@@ -25,7 +24,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -35,4 +33,4 @@ doc() {
 	cp -a "$builddir"/doc "$subpkgdir"/usr/share/doc/$pkgname
 }
 
-sha512sums="71b380ff0eaa1d297bf6af5a1c979efdf34d10ec1e440fd1ee3fcab8ddf2c5d7c903d151986ecb5f01a9e0135bedc8021e5fbf82a3fd66abfebcb5e3cbf19242  s6-linux-init-1.0.3.1.tar.gz"
+sha512sums="791e376911c9217adace72c6048a295d4b486fc51c0a73578a40a0b020a735d9444f58e5f49d613e99a81aadd63d016ae60c8b056c49c1b50693a7b054890926  s6-linux-init-1.0.4.0.tar.gz"
