testing/faudio: upgrade to 20.03

--- a/testing/faudio/APKBUILD
+++ b/testing/faudio/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: TBK <alpine@jjtc.eu>
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=faudio
-pkgver=20.02
+pkgver=20.03
 pkgrel=0
 pkgdesc="Accuracy-focused XAudio reimplementation for open platforms"
 url="https://fna-xna.github.io/"
@@ -13,25 +13,23 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/FNA-XNA/FAudio/archive/$pkgv
 builddir="$srcdir/FAudio-$pkgver"
 
 build() {
-	mkdir build && cd build
-	cmake .. \
+	cmake -B build . \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX="/usr" \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DCMAKE_INSTALL_INCLUDEDIR=include/FAudio \
 		-DFFMPEG=ON \
 		-DBUILD_TESTS=1
-	make
+	make -C build
 }
 
 check() {
-	cd "$builddir/build"
+	cd build
 	./faudio_tests
 }
 
 package() {
-	cd "$builddir/build"
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
-sha512sums="69995fa1fb9ea41182e47f8143252db517adf4e9dc4a0556c9032af5c867259cc7edc81196b10ef043e6118a2e3687b34368f3ac8ffe9294398c5143b9928476  faudio-20.02.tar.gz"
+sha512sums="4b5772a43d4af9fce443d6e2275024cce54693d27f8770e030dd1b3fbe75cf678f9189e897c002f9176e8fc8a2c552c8ac191c9e14079ce7308680c0fa84b00c  faudio-20.03.tar.gz"
