--- a/community/texlive/APKBUILD
+++ b/community/texlive/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Marian Buschsieweke <marian.buschsieweke@ovgu.de>
 pkgname=texlive
 pkgver=20190410
-pkgrel=8
+pkgrel=9
 pkgdesc="Comprehensive TeX document production system"
 url="https://tug.org/texlive/"
 arch="all"
-license="GPL"
+license="GPL-2.0-or-later AND GPL-3.0-or-later"
 depends="perl texmf-dist>=2018.50036"
 makedepends="freetype-dev libpng-dev poppler-dev icu-dev harfbuzz-dev
 	cairo-dev pixman-dev zziplib-dev libpaper-dev graphite2-dev
