main/glade3: upgrade to 3.8.6

--- a/main/glade3/APKBUILD
+++ b/main/glade3/APKBUILD
@@ -1,19 +1,16 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=glade3
-pkgver=3.8.5
-pkgrel=5
-pkgdesc="A RAD tool for rapid development of GTK+ user interfaces"
+pkgver=3.8.6
+pkgrel=0
+pkgdesc="A RAD tool for rapid development of GTK+2 user interfaces"
 url="https://glade.gnome.org/"
 arch="all"
-license="LGPL-2.1+ AND GPL-2.0+"
-depends=
-makedepends="gtk+2.0-dev libxml2-dev paxmark"
-install=
+license="LGPL-2.1-or-later AND GPL-2.0-or-later"
+makedepends="gtk+2.0-dev itstool libxml2-dev paxmark python2"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="https://download.gnome.org/sources/glade3/${pkgver%.*}/glade3-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -28,14 +25,12 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	paxmark -r "$pkgdir"/usr/bin/glade-3
 }
 
-sha512sums="722a33f1a1ec3baa785bf3c6f7f5ec2cbe7cf6fe44c9c26d33728de16f2856cbb1ace0cd38c5b5356081e326666cc82fd00f2b6af53bd06bb832079610042985  glade3-3.8.5.tar.xz"
+sha512sums="14ea975a62a2e032e0f39c38d13e0717119ef15b44e0c30bc0d9f19850ebd1535cb05eb0d240c1c8aeb88f38c276fea3a2880cb8aa684b976726ced729e7f8cf  glade3-3.8.6.tar.xz"
