community/analitza: move from testing

--- a/community/analitza/APKBUILD
+++ b/community/analitza/APKBUILD
@@ -13,19 +13,20 @@ source="https://download.kde.org/stable/release-service/$pkgver/src/analitza-$pk
 subpackages="$pkgname-dev $pkgname-lang"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="7393bdd2a8adfc2bd0963cff361bfcd69aff33cb958e62f696c64ae070bd158e37b595d2bb18ecb14f0785bf6c96b5f8a2c4a18e8762daaeda913541050c8ecc  analitza-19.12.2.tar.xz"
