--- a/community/libkeduvocdocument/APKBUILD
+++ b/community/libkeduvocdocument/APKBUILD
@@ -12,19 +12,20 @@ source="https://download.kde.org/stable/release-service/$pkgver/src/libkeduvocdo
 subpackages="$pkgname-dev $pkgname-lang"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="108f7203d618076b47ce606b238aa237e5a0e58241981f98a0b76348fffd963670df8f4fa7d577ecc2cada4123e136e5ac09b9c8d0a3b7a0af0b4f86cef3f8d5  libkeduvocdocument-19.12.2.tar.xz"
