community/kmime: move from testing

--- a/community/kmime/APKBUILD
+++ b/community/kmime/APKBUILD
@@ -9,23 +9,25 @@ url="https://community.kde.org/KDE_PIM"
 license="LGPL-2.0-or-later"
 depends_dev="qt5-qtbase-dev ki18n-dev kcodecs-dev"
 makedepends="$depends_dev extra-cmake-modules"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kmime-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
+
 	# kmime-headertest and kmime-messagetest are broken
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest -E "kmime-(header|message)test"
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 sha512sums="5df4b5e81de9b4b7026e41faca5efaba3c484ddf18ac4016e67ea9464ae7bc3e2307a184396c9411abacacdf91f4493b1509e45fd322625d935a6f0788f5896d  kmime-19.12.2.tar.xz"
