community/kpkpass: move from testing

--- a/community/kpkpass/APKBUILD
+++ b/community/kpkpass/APKBUILD
@@ -9,23 +9,24 @@ pkgdesc="Apple Wallet Pass reader"
 license="GPL-2.0-or-later"
 depends_dev="qt5-qtbase-dev karchive-dev"
 makedepends="$depends_dev extra-cmake-modules shared-mime-info"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kpkpass-$pkgver.tar.xz"
 subpackages="$pkgname-dev"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="74d2bc23d28c559bd41d9335c5c294e1aa8d49090a30b4b0a2c2900ef409919afa8a334e2652d318e555c5f9ecfa4e52febe8359d1926baaa11860734058f13c  kpkpass-19.12.2.tar.xz"
