community/fluidsynth: move from testing

--- a/community/fluidsynth/APKBUILD
+++ b/community/fluidsynth/APKBUILD
@@ -13,20 +13,20 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/fluidsynth/fluidsynth/archiv
 subpackages="$pkgname-dev $pkgname-doc"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DLIB_INSTALL_DIR=lib \
 		-DFLUID_DAEMON_ENV_FILE=/etc/conf.d/fluidsynth
-	make
+	make -C build
 }
 
 check() {
-	make -k check
+	make -C build -k check
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="f8776c59aa0aa4a25fe3c38973c994e8608f8fad8a2e478db0d0232d4c787983dfdcba200c558cd810e892930b50184af4bc4a7f3c98ec5c38e147fd715e51b8  fluidsynth-2.1.1.tar.gz"
