community/grantlee: move from testing

--- a/community/grantlee/APKBUILD
+++ b/community/grantlee/APKBUILD
@@ -14,21 +14,23 @@ source="http://downloads.grantlee.org/grantlee-$pkgver.tar.gz"
 subpackages="$pkgname-dev $pkgname-doc"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr
-	make
-	make docs
+	make -C build
+	make -C build docs
 }
 
 check() {
+	cd "$builddir"/build
+
 	# testfilters is broken
 	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest -E "testfilters"
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
-	install -Dm644 apidox/* -t "$pkgdir"/usr/share/doc/$pkgname
+	DESTDIR="$pkgdir" make -C build install
+	install -Dm644 build/apidox/* -t "$pkgdir"/usr/share/doc/$pkgname
 }
 
 sha512sums="94b53d103aa775e6d45357d44d5634a5214d12ea7178d251fda30c5a88ddc2682ae44501ee8b7dc475793b84fa0998eb0bc13eea3f2e10ab29b1489db6ea60bd  grantlee-5.2.0.tar.gz"
