--- a/community/icinga2/APKBUILD
+++ b/community/icinga2/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=icinga2
-pkgver=2.11.2
-pkgrel=2
+pkgver=2.11.3
+pkgrel=0
 pkgdesc="An open source host, service and network monitoring program"
 url="http://www.icinga.org"
 arch="all !armhf !armv7 !s390x"
@@ -18,8 +18,12 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/Icinga/icinga2/archive/v$pkg
 	boost.patch
 	$pkgname.initd"
 
-build() {
+prepare() {
+	default_prepare
 	mkdir "$builddir"/build
+}
+
+build() {
 	cd "$builddir"/build
 	cmake "$srcdir/$pkgname-$pkgver" \
 		-DCMAKE_BUILD_TYPE=None \
@@ -112,6 +116,6 @@ vim() {
 	cp -r "$builddir"/tools/syntax/vim "$subpkgdir"/usr/share/vim/vimfiles
 }
 
-sha512sums="88bed284aae0196b964a9998c638066f54788474f91d9e21b0f262bf889b17d46ab0c143f9dc4bb976bfcc5785a1f0521c0bf16fa7e54a7af22fd1baae1a231d  icinga2-2.11.2.tar.gz
+sha512sums="616e938fabaa6565fb9ac4824649c09801dd53b3517c0a9b5b62307293bc838377c18818cc13dd40e240902f02455c421d433b6ee54671403598c5b7aeb78ea1  icinga2-2.11.3.tar.gz
 2ecf1682c4be14ea68343dc6c8140a3a70aa279189d64d8fe1c588f9db971de8e599bdd2ae1c0675eee1eecc7a93fb89ac8ee73abaa0314f6c8384ef4fba1d0f  boost.patch
 46890756104563b1a4bc60b5952a2d63f5263883cfe702de7ccc4616dfe5b20d380ff1bc190482741a06bcfe7e662ad14a6965e26b9ce916ef56a1248d6b524c  icinga2.initd"
