--- a/community/sg3_utils/APKBUILD
+++ b/community/sg3_utils/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=sg3_utils
-pkgver=1.44
+pkgver=1.45
 pkgrel=0
 pkgdesc="Generic SCSI utilities"
 url="http://sg.danny.cz/sg/sg3_utils.html"
@@ -10,7 +10,7 @@ options="!check"  # No test suite.
 license="BSD-2-Clause AND GPL-2.0-or-later"
 makedepends="linux-headers"
 subpackages="$pkgname-dev $pkgname-doc"
-source="http://sg.danny.cz/sg/p/$pkgname-$pkgver.tgz"
+source="http://sg.danny.cz/sg/p/sg3_utils-$pkgver.tgz"
 
 build() {
 	./configure \
@@ -32,4 +32,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="518cfe1e52c9c6277f34e87a3b198757752b7b1cda164f1a6cca11b7990f1cde92f511d14811ef43c36d7460ff29ca5141d2ac665e1219f75d1150877d387ef2  sg3_utils-1.44.tgz"
+sha512sums="e7a8d0bcee707fe8a3bbdb7b5579e48a9176b5968f3ebfb5b5c39c4b7d70b65c7e48f3b57580833b658354922d1d1aed28b177e669610f555d2aebc4b88d51d0  sg3_utils-1.45.tgz"
