--- a/main/py3-werkzeug/APKBUILD
+++ b/main/py3-werkzeug/APKBUILD
@@ -2,14 +2,15 @@
 # Maintainer: prspkt <prspkt@protonmail.com>
 pkgname=py3-werkzeug
 _pkgname=Werkzeug
-pkgver=0.14.1
-pkgrel=3
+pkgver=0.16.1
+pkgrel=0
 pkgdesc="The WSGI swiss-army knife"
 url="http://werkzeug.pocoo.org/"
 arch="noarch"
 license="MIT"
 depends="python3"
 makedepends="py3-setuptools"
+options="!check" # doesn't find its own modules even with PYTHONPATH set
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
@@ -17,13 +18,11 @@ replaces="py-werkzeug" # Backwards compatibility
 provides="py-werkzeug=$pkgver-r$pkgrel" # Backwards compatibility
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
 package() {
-	cd "$builddir"
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="64976cc46c1cee2203112c50aba6f9404d4e48d4a90f8b11837148b5415a28572b7e706095586045a46879e853fc5a80c63e7bf0c13eda29d564a37b4a554c0b  Werkzeug-0.14.1.tar.gz"
+sha512sums="1f27ea5b890c10df67726299c7656bab492e356021beec8f7a08413b386b7a884b64aaa16b80b60d7060a59c8c8e497ccc4c1e1e9104e8800dbfd7cf8b5b0d9c  Werkzeug-0.16.1.tar.gz"
