community/py3-requests-oauthlib: enable tests

--- a/community/py3-requests-oauthlib/APKBUILD
+++ b/community/py3-requests-oauthlib/APKBUILD
@@ -4,13 +4,12 @@ _pkgname=requests-oauthlib
 pkgver=1.2.0
 pkgrel=1
 pkgdesc="First-class OAuth library support for Requests"
-options="!check" # Requires 'requests-mock'
 url="https://pypi.python.org/pypi/requests-oauthlib"
 arch="noarch"
 license="ISC"
 depends="python3 py3-oauthlib py3-requests"
 makedepends="py3-setuptools"
-checkdepends="py3-mock"
+checkdepends="py3-mock py3-requests-mock"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
