--- a/community/gnome-builder/APKBUILD
+++ b/community/gnome-builder/APKBUILD
@@ -11,9 +11,9 @@ depends="devhelp flatpak-builder py3-lxml py3-gobject3"
 makedepends="meson libdazzle-dev glib-dev gtk+3.0-dev gtksourceview4-dev
 	json-glib-dev jsonrpc-glib-dev pango-dev libpeas-dev webkit2gtk-dev
 	libxml2-dev libgit2-glib-dev template-glib-dev llvm-dev gspell-dev
-	enchant2-dev devhelp-dev glade3-dev pcre2-dev gtkmm3-dev
+	enchant2-dev devhelp-dev glade-dev pcre2-dev gtkmm3-dev
 	vte3-dev vala gobject-introspection-dev ctags clang-dev flatpak-dev
-	libexecinfo-dev glade-dev"
+	libexecinfo-dev"
 checkdepends="appstream-glib desktop-file-utils xvfb-run"
 subpackages="$pkgname-dev $pkgname-lang"
 source="https://download.gnome.org/sources/gnome-builder/${pkgver%.*}/gnome-builder-$pkgver.tar.xz
@@ -42,6 +42,7 @@ check() {
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
+
 sha512sums="886c732f20563818dcf1deb96d4277fe96a9499b999cfbc7a64286e816e9a36bb978932d36a1e764b54c2d36891b7546fa058f51e036b0fa101c0872f4ce51d8  gnome-builder-3.34.1.tar.xz
 7e235b7591c73f4e19edcc9cfc17be65fa81d66ea4b098673c5750e6ab93cf8ba59a7d55d4d2f5bd44134608ad08664d905fd8e74d4941f09e6dc0257fa60547  fix-musl.patch
 69a7c4c62d70cfda38185e1d25f4832409a2de6c7503099eb7cb64be169756dd5f9a657e652796abd0f23a1a9a9dfb85894fa1bcc03566d057716d3cb4816058  build-Fix-link_whole-usage-for-meson-0.52.0.patch"
